--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <head>
         <title>My first webpage</title>
         <style>
-            h1 {
-                font-family: Georgia, 'Times New Roman', Times, serif;
-                color: green;
-                font: 2em;
+            header {
+                background-color:goldenrod;
+                margin-bottom: 10px;
             }
             p {
                 font-family: Arial, Helvetica, sans-serif;
@@ -15,34 +14,44 @@
             }
             img {
                 border-radius: 50%;
+                width: 200px;
             }
         </style>
     </head>
     <body>
-        <h1>
-            Hey, It's Mark Borum!
-        </h1>
-        <p>If you want to see where I poorly build websites check out my <a href="https://github.com/mbo11" target="_blank">Github</a>.</p>
-        <p>I was proudly made in the U.S.A. 🇺🇸</p>
-        <p>When I'm not struglling to put together a text-based site, I'm typically doing one of the three <q>W's</q>:</p>
-        <ul>
-            <li>Wrestling bears</li>
-            <li>Wheelbarrow racing</li>
-            <li>Whistling gently in my sleep</li>
-        </ul>
-        <p>I couldn't find a picture of the bear wrestling, but please enjoy seeing me whistle quietly with my nugget of a dog.</p>
-        <img src="IMG_3422.jpg" alt="Mark sleeping with his dog Daisy" width="200px">
-        <p>Let's keep in touch!</p>
-        <form>
-            <label for="fname">First Name:</label>
-            <input type="text" name="fname" placeholder="Enter Name"/>
-            <br/>
-            <label for="email">Email:</label>
-            <input type="email" name="email" placeholder="Enter Email"/>
-            <br/>
-            <textarea>Enter Comment</textarea>
-            <br/>
-            <input type="submit">
-        </form>
+        <header>
+            <h1 style="color:rgb(33, 33, 33);font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;padding-top:20px;padding-left: 20px;">Hey, It's Mark Borum!</h1>
+            <hr/>
+        </header>
+        <section id="intro">
+            <p>If you want to see where I poorly build websites check out my <a href="https://github.com/mbo11" target="_blank">Github</a>.</p>
+            <p>I was proudly made in the U.S.A. 🇺🇸</p>
+        </section>
+        <section id="hobbies">
+            <p>When I'm not struglling to put together a text-based site, I'm typically doing one of the three <q>W's</q>:</p>
+            <ul>
+                <li>Wrestling bears</li>
+                <li>Wheelbarrow racing</li>
+                <li>Whistling gently in my sleep</li>
+            </ul>
+        </section>
+        <section id="about">
+            <p>I couldn't find a picture of the bear wrestling, but please enjoy seeing me whistle quietly with my nugget of a dog.</p>
+            <img src="IMG_3422.jpg" alt="Mark sleeping with his dog Daisy" width="200px">
+        </section>
+        <section id="form">
+            <h2 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;font-weight: 300;color: rgb(165, 133, 195);">Let's keep in touch!</h2>
+            <form>
+                <label for="fname">First Name:</label>
+                <input type="text" style="margin-bottom: 10px;" name="fname" placeholder="Enter Name"/>
+                <br/>
+                <label for="email">Email:</label>
+                <input type="email" style="margin-bottom: 10px;" name="email" placeholder="Enter Email"/>
+                <br/>
+                <textarea>Enter Comment</textarea>
+                <br/>
+                <input type="submit">
+            </form>
+        </section>
     </body>
 </html>
