bio-site-commit

--- a/index.html
+++ b/index.html
@@ -3,25 +3,19 @@
 <html>
     <head>
         <title>My first webpage</title>
-        <style>
-            header {
-                background-color:goldenrod;
-                margin-bottom: 10px;
-            }
-            p {
-                font-family: Arial, Helvetica, sans-serif;
-                font: 100;
-            }
-            img {
-                border-radius: 50%;
-                width: 200px;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <header>
-            <h1 style="color:rgb(33, 33, 33);font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;padding-top:20px;padding-left: 20px;">Hey, It's Mark Borum!</h1>
-            <hr/>
+            <h1>Mark Borum</h1>
+            <nav>
+                <ul style="padding-inline-start: 0px;">
+                    <li class="navlink">Home</li>
+                    <li class="navlink">Intro</li>
+                    <li class="navlink">About</li>
+                    <li class="navlink">Contact</li>
+                </ul>
+            </nav>
         </header>
         <section id="intro">
             <p>If you want to see where I poorly build websites check out my <a href="https://github.com/mbo11" target="_blank">Github</a>.</p>
